avoid images overflowing readme container

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,7 @@
 pre code.hljs{
   padding: 0 !important;
 }
+
+#readme-body img, #readme-body table{
+  max-width: 100%;
+}
